# exoplanet-ai

./: README.md  main.py  pyproject.toml
data/: TIC_307210830.csv
models/: transit_cnn.pt  transit_cnn_meta.json
notebooks/: 01-descarga-curvas-de-luz.ipynb  02-preprocesamiento.ipynb  03-entrenamiento-modelo.ipynb  04-deteccion.ipynb
notebooks/.ipynb_checkpoints/: 01-descarga-curvas-de-luz-checkpoint.ipynb  03-entrenamiento-modelo-checkpoint.ipynb
